--- a/about/index.html
+++ b/about/index.html
@@ -4,4 +4,5 @@ title: About Me
 ---
 
 <h1>{{ page.title }}</h1>
-[@mewmevy](https://www.instagram.com/mewmevy/)
+
+<div><a href="https://www.instagram.com/mewmevy/">@mewmevy</a></div>
