--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <!-- Our Website CSS Styles -->
     <link rel="stylesheet" href="css/main.css">
 
+    <base href="/">
+
 </head>
 <body ng-app="tutorialWebApp">
 <!--[if lt IE 7]>
